# bookstore

./: README.md
bookstore/bookstore/: db.sqlite3  pyproject.toml
bookstore/bookstore/bookstore/: settings.py
