[project]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = [
    {name = "Rerisson Henrique", email = "rerisson.rodrigues@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pytest >=7.0",
    "factory-boy >=3.3.1",
    "django (>=5.1.5,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
